finished unregister
